--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     </div>
                 </div>
                 <div class="contact--icons">
-                    <a href=""><span><img src="/assets/icons/instagram gray.svg" alt=""></span></a>
+                    <a href="https://instagram.com/nicoagesta?igshid=MzMyNGUyNmU2YQ=="><span><img src="/assets/icons/instagram gray.svg" alt=""></span></a>
                     <a href="https://open.spotify.com/playlist/0COGJ6ZwPgXeJJJd7Yo0PF?si=4a8e2721e36343e0"><span><img src="/assets/icons/Spotify gray.svg" alt=""></span></a>
                 </div>
         </section>
