--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="description" content="Nico Agesta es un productor musical con " /> -->
+    <!-- <meta name="description" content="Nico Agesta | Productor Musical" /> -->
     <meta name="robots" content="index,follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
