--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
                 <div class="home--biography">
                     <div class="home--text">
                         <p id="home_text_one">
-                            Músico, compositor y productor argentino. Hace mas de 10 años que me sumergí en la producción musical a través de mi proyecto solista, y hoy disfruto de acompañar el proceso creativo de otros artistas con quienes trabajo, explorando diferentes géneros musicales.</p>
+                            Músico, compositor y productor argentino. Hace más de 10 años que me sumergí en la producción musical a través de mi proyecto solista, y hoy disfruto de acompañar el proceso creativo de otros artistas con quienes trabajo, explorando diferentes géneros musicales.</p>
                         
                         <p id="home_text_two">
-                            Desde mi home studio “La Terracita” realizo producciones musicales, grabación y mezcla, también compongo musica para películas, series y publicidades.</p>
+                            Desde mi home studio “La Terracita” realizo producciones musicales, grabación y mezcla, también compongo música para películas, series y publicidades.</p>
                 
                         <div>
                             <a href="mailto:agestanicolas@gmail.com?Subject=Aquí%20el%20asunto%20del%20mail" class="button" id="contact--button--mail"><span></span>agestanicolas@gmail.com </a>
