--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 
     <link rel="stylesheet" href="/css/menu.css">
     <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 600px)">
+    <!-- <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 600px)"> -->
     <link rel="stylesheet" href="/css/menu desktop.css" media="(min-width: 1000px)">
-    <link rel="stylesheet" href="/css/desktop__1024.css" media="(min-width: 999px)">
-    <link rel="stylesheet" href="/css/desktop__1440.css" media="(min-width: 1700px)">
-
+    <link rel="stylesheet" href="/css/desktop__1000.css" media="(min-width: 999px)">
+    <link rel="stylesheet" href="/css/desktop__1700.css" media="(min-width: 1700px)">
+    <link rel="stylesheet" href="/css/desktop__2200.css" media="(min-width: 2200px)">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;500&family=Unbounded:wght@200;400;500;700&display=swap" rel="stylesheet">
