--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         </a>
                     </div>
                     <div>
-                        <a href="https://wa.me/5491134961458/?text=Hola! Soy un ejemplo" class="button" id="contact--button--wpp"><span ></span>
+                        <a href="https://wa.me/5491134961458/?text=" class="button" id="contact--button--wpp"><span ></span>
                             <div>
                                 +54 9 11 3496 1458
                             </div>
